- SecureCloud is now Async coded