@@ -1,1 +1,1 @@
-v1.5.2
+1.5.2
